examples/test/testpolicy4702.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4702
  namespace: namespace480
spec:
  podSelector:
    matchLabels:
      key15: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value7
          key0: value38
      podSelector:
        matchLabels:
          key24: value39
          key36: value2
          key26: value15
